// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> <Alert variant="error" /> renders correctly 1`] = `
.emotion-15 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-13 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-9 {
  padding-right: 16px;
}

.emotion-17 {
  margin-bottom: 16px;
  background-color: ui.errorBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

<Alert
  mb={3}
  variant="error"
>
  <Component
    mb={3}
    variant="error"
  >
    <Box
      bg="ui.errorBackground"
      mb={3}
    >
      <div
        className="emotion-17 emotion-10"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-15 emotion-10"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-13 emotion-14"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-9 emotion-10"
                  >
                    <Icon
                      color="ui.error"
                      name="warning"
                      size={24}
                      title={null}
                    >
                      <WithTheme(Component)
                        className="emotion-3 emotion-0"
                        color="ui.error"
                        name="warning"
                        size={24}
                        title={null}
                      >
                        <Component
                          className="emotion-3 emotion-0"
                          color="ui.error"
                          name="warning"
                          size={24}
                          title={null}
                        >
                          <StyledSvg
                            className="emotion-3 emotion-0"
                            color="ui.error"
                            fill="currentcolor"
                            height={24}
                            title="warning"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <svg
                              className="emotion-0 emotion-1 emotion-2"
                              color="ui.error"
                              fill="currentcolor"
                              height={24}
                              title="warning"
                              viewBox="0 0 24 24"
                              width={24}
                            >
                              <path
                                d={null}
                              />
                            </svg>
                          </StyledSvg>
                        </Component>
                      </WithTheme(Component)>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-11 emotion-12"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert variant="info" /> renders correctly 1`] = `
.emotion-15 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-13 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-9 {
  padding-right: 16px;
}

.emotion-17 {
  margin-bottom: 16px;
  background-color: ui.infoBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

<Alert
  mb={3}
  variant="info"
>
  <Component
    mb={3}
    variant="info"
  >
    <Box
      bg="ui.infoBackground"
      mb={3}
    >
      <div
        className="emotion-17 emotion-10"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-15 emotion-10"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-13 emotion-14"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-9 emotion-10"
                  >
                    <Icon
                      color="greys.charcoal"
                      name="info"
                      size={24}
                      title={null}
                    >
                      <WithTheme(Component)
                        className="emotion-3 emotion-0"
                        color="greys.charcoal"
                        name="info"
                        size={24}
                        title={null}
                      >
                        <Component
                          className="emotion-3 emotion-0"
                          color="greys.charcoal"
                          name="info"
                          size={24}
                          title={null}
                        >
                          <StyledSvg
                            className="emotion-3 emotion-0"
                            color="greys.charcoal"
                            fill="currentcolor"
                            height={24}
                            title="info"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <svg
                              className="emotion-0 emotion-1 emotion-2"
                              color="greys.charcoal"
                              fill="currentcolor"
                              height={24}
                              title="info"
                              viewBox="0 0 24 24"
                              width={24}
                            >
                              <path
                                d={null}
                              />
                            </svg>
                          </StyledSvg>
                        </Component>
                      </WithTheme(Component)>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-11 emotion-12"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert variant="success" /> renders correctly 1`] = `
.emotion-15 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-13 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-17 {
  margin-bottom: 16px;
  background-color: ui.successBackground;
}

.emotion-9 {
  padding-right: 16px;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

<Alert
  mb={3}
  variant="success"
>
  <Component
    mb={3}
    variant="success"
  >
    <Box
      bg="ui.successBackground"
      mb={3}
    >
      <div
        className="emotion-17 emotion-10"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-15 emotion-10"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-13 emotion-14"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-9 emotion-10"
                  >
                    <Icon
                      color="ui.success"
                      name="checkCircle"
                      size={24}
                      title={null}
                    >
                      <WithTheme(Component)
                        className="emotion-3 emotion-0"
                        color="ui.success"
                        name="checkCircle"
                        size={24}
                        title={null}
                      >
                        <Component
                          className="emotion-3 emotion-0"
                          color="ui.success"
                          name="checkCircle"
                          size={24}
                          title={null}
                        >
                          <StyledSvg
                            className="emotion-3 emotion-0"
                            color="ui.success"
                            fill="currentcolor"
                            height={24}
                            title="checkCircle"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <svg
                              className="emotion-0 emotion-1 emotion-2"
                              color="ui.success"
                              fill="currentcolor"
                              height={24}
                              title="checkCircle"
                              viewBox="0 0 24 24"
                              width={24}
                            >
                              <path
                                d={null}
                              />
                            </svg>
                          </StyledSvg>
                        </Component>
                      </WithTheme(Component)>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-11 emotion-12"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert.error /> renders correctly 1`] = `
.emotion-15 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-13 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-9 {
  padding-right: 16px;
}

.emotion-17 {
  margin-bottom: 16px;
  background-color: ui.errorBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

<Alert.error
  mb={3}
  variant="error"
>
  <Component
    mb={3}
    variant="error"
  >
    <Box
      bg="ui.errorBackground"
      mb={3}
    >
      <div
        className="emotion-17 emotion-10"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-15 emotion-10"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-13 emotion-14"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-9 emotion-10"
                  >
                    <Icon
                      color="ui.error"
                      name="warning"
                      size={24}
                      title={null}
                    >
                      <WithTheme(Component)
                        className="emotion-3 emotion-0"
                        color="ui.error"
                        name="warning"
                        size={24}
                        title={null}
                      >
                        <Component
                          className="emotion-3 emotion-0"
                          color="ui.error"
                          name="warning"
                          size={24}
                          title={null}
                        >
                          <StyledSvg
                            className="emotion-3 emotion-0"
                            color="ui.error"
                            fill="currentcolor"
                            height={24}
                            title="warning"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <svg
                              className="emotion-0 emotion-1 emotion-2"
                              color="ui.error"
                              fill="currentcolor"
                              height={24}
                              title="warning"
                              viewBox="0 0 24 24"
                              width={24}
                            >
                              <path
                                d={null}
                              />
                            </svg>
                          </StyledSvg>
                        </Component>
                      </WithTheme(Component)>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-11 emotion-12"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert.error>
`;

exports[`<Alert /> <Alert.info /> renders correctly 1`] = `
.emotion-15 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-13 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-9 {
  padding-right: 16px;
}

.emotion-17 {
  margin-bottom: 16px;
  background-color: ui.infoBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

<Alert.info
  mb={3}
  variant="info"
>
  <Component
    mb={3}
    variant="info"
  >
    <Box
      bg="ui.infoBackground"
      mb={3}
    >
      <div
        className="emotion-17 emotion-10"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-15 emotion-10"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-13 emotion-14"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-9 emotion-10"
                  >
                    <Icon
                      color="greys.charcoal"
                      name="info"
                      size={24}
                      title={null}
                    >
                      <WithTheme(Component)
                        className="emotion-3 emotion-0"
                        color="greys.charcoal"
                        name="info"
                        size={24}
                        title={null}
                      >
                        <Component
                          className="emotion-3 emotion-0"
                          color="greys.charcoal"
                          name="info"
                          size={24}
                          title={null}
                        >
                          <StyledSvg
                            className="emotion-3 emotion-0"
                            color="greys.charcoal"
                            fill="currentcolor"
                            height={24}
                            title="info"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <svg
                              className="emotion-0 emotion-1 emotion-2"
                              color="greys.charcoal"
                              fill="currentcolor"
                              height={24}
                              title="info"
                              viewBox="0 0 24 24"
                              width={24}
                            >
                              <path
                                d={null}
                              />
                            </svg>
                          </StyledSvg>
                        </Component>
                      </WithTheme(Component)>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-11 emotion-12"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert.info>
`;

exports[`<Alert /> <Alert.success /> renders correctly 1`] = `
.emotion-15 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-13 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-17 {
  margin-bottom: 16px;
  background-color: ui.successBackground;
}

.emotion-9 {
  padding-right: 16px;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

<Alert.success
  mb={3}
  variant="success"
>
  <Component
    mb={3}
    variant="success"
  >
    <Box
      bg="ui.successBackground"
      mb={3}
    >
      <div
        className="emotion-17 emotion-10"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-15 emotion-10"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-13 emotion-14"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-9 emotion-10"
                  >
                    <Icon
                      color="ui.success"
                      name="checkCircle"
                      size={24}
                      title={null}
                    >
                      <WithTheme(Component)
                        className="emotion-3 emotion-0"
                        color="ui.success"
                        name="checkCircle"
                        size={24}
                        title={null}
                      >
                        <Component
                          className="emotion-3 emotion-0"
                          color="ui.success"
                          name="checkCircle"
                          size={24}
                          title={null}
                        >
                          <StyledSvg
                            className="emotion-3 emotion-0"
                            color="ui.success"
                            fill="currentcolor"
                            height={24}
                            title="checkCircle"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <svg
                              className="emotion-0 emotion-1 emotion-2"
                              color="ui.success"
                              fill="currentcolor"
                              height={24}
                              title="checkCircle"
                              viewBox="0 0 24 24"
                              width={24}
                            >
                              <path
                                d={null}
                              />
                            </svg>
                          </StyledSvg>
                        </Component>
                      </WithTheme(Component)>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-11 emotion-12"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert.success>
`;

exports[`<Alert /> contained renders correctly 1`] = `
.emotion-6 {
  margin-bottom: 16px;
  background-color: greys.porcelain;
}

.emotion-2 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-4 {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: default;
}

<Alert
  contained={true}
  mb={3}
  variant="default"
>
  <Component
    contained={true}
    mb={3}
    variant="default"
  >
    <Box
      bg="greys.porcelain"
      mb={3}
    >
      <div
        className="emotion-6 emotion-7"
      >
        <Container
          gutter="default"
          maxWidth="default"
        >
          <div
            className="emotion-4 emotion-5"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-2 emotion-3"
              >
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-0 emotion-1"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Container>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> renders correctly 1`] = `
.emotion-6 {
  margin-bottom: 16px;
  background-color: greys.porcelain;
}

.emotion-4 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-2 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 0;
  text-align: left;
}

<Alert
  mb={3}
  variant="default"
>
  <Component
    mb={3}
    variant="default"
  >
    <Box
      bg="greys.porcelain"
      mb={3}
    >
      <div
        className="emotion-6 emotion-5"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-4 emotion-5"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-2 emotion-3"
              >
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-0 emotion-1"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;
